--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" property="og:description" content="A website that shows what is currently being livestreamed on youtube with links to the stream."/>
+    <meta name="keywords" content="ytlive, yt, live, streams, youtube"/>
+    <meta name="author" content="eisandbar" />
     <title>ytlive</title>
   </head>
   <body>
